force-app/main/default/objects/Checklist_Detail__c/Checklist_Detail__c.object-meta.xml
<CustomObject>
    <label>Checklist Detail</label>
    <nameField>
        <label>Checklist Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>