force-app/main/default/objects/Checklist_Detail__c/fields/Application_Collateral__c.field-meta.xml
<CustomField>
    <fullName>Application_Collateral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Collateral</label>
    <referenceTo>genesis__Application_Collateral__c</referenceTo>
    <relationshipLabel>Checklist Details</relationshipLabel>
    <relationshipName>Checklist_Details</relationshipName>
    <type>Lookup</type>
</CustomField>