force-app/main/default/objects/Checklist_Detail__c/fields/Asset_Information__c.field-meta.xml
<CustomField>
    <fullName>Asset_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Information</label>
    <referenceTo>genesis__Asset_Information__c</referenceTo>
    <relationshipLabel>Checklist Details</relationshipLabel>
    <relationshipName>Checklist_Details</relationshipName>
    <type>Lookup</type>
</CustomField>