force-app/main/default/objects/Checklist_Detail__c/fields/Checklist__c.field-meta.xml
<CustomField>
    <fullName>Checklist__c</fullName>
    <label>Checklist</label>
    <referenceTo>genesis__Checklist__c</referenceTo>
    <relationshipLabel>Checklist Details</relationshipLabel>
    <relationshipName>Checklist_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>