force-app/main/default/objects/Checklist_Detail__c/fields/Employment_Information__c.field-meta.xml
<CustomField>
    <fullName>Employment_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employment Information</label>
    <referenceTo>genesis__Employment_Information__c</referenceTo>
    <relationshipLabel>Checklist Details</relationshipLabel>
    <relationshipName>Checklist_Details</relationshipName>
    <type>Lookup</type>
</CustomField>