force-app/main/default/objects/Checklist_Detail__c/fields/Exception_Approver__c.field-meta.xml
<CustomField>
    <fullName>Exception_Approver__c</fullName>
    <label>Exception Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>