force-app/main/default/objects/Checklist_Detail__c/fields/Exception_Commentary__c.field-meta.xml
<CustomField>
    <fullName>Exception_Commentary__c</fullName>
    <label>Exception Commentary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>