force-app/main/default/objects/Checklist_Detail__c/fields/Income__c.field-meta.xml
<CustomField>
    <fullName>Income__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Income</label>
    <referenceTo>genesis__Income__c</referenceTo>
    <relationshipLabel>Checklist Details</relationshipLabel>
    <relationshipName>Checklist_Details</relationshipName>
    <type>Lookup</type>
</CustomField>