force-app/main/default/objects/Checklist_Detail__c/fields/Liability__c.field-meta.xml
<CustomField>
    <fullName>Liability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Liability</label>
    <referenceTo>genesis__Liability__c</referenceTo>
    <relationshipLabel>Checklist Details</relationshipLabel>
    <relationshipName>Checklist_Details</relationshipName>
    <type>Lookup</type>
</CustomField>