force-app/main/default/objects/Checklist_Detail__c/fields/Manual_Message__c.field-meta.xml
<CustomField>
    <fullName>Manual_Message__c</fullName>
    <label>Manual Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>