force-app/main/default/objects/Checklist_Detail__c/fields/Party_Name__c.field-meta.xml
<CustomField>
    <fullName>Party_Name__c</fullName>
    <formula>IF(ISNULL(Party__c), IF(ISNULL(Employment_Information__c), IF(ISNULL(Income__c), &apos;&apos;, Income__r.Party__r.genesis__Party_Name__c), Employment_Information__r.Party__r.genesis__Party_Name__c),  IF(  Party__r.clcommon__Account__r.IsPersonAccount == True,  Party__r.clcommon__Account__r.FirstName + &apos; &apos; +  Party__r.clcommon__Account__r.LastName ,Party__r.genesis__Party_Name__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Party Name</label>
    <type>Text</type>
</CustomField>