force-app/main/default/objects/Checklist_Detail__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record Id</label>
    <type>TextArea</type>
</CustomField>