force-app/main/default/objects/Checklist_Detail__c/fields/Rule_Classification__c.field-meta.xml
<CustomField>
    <fullName>Rule_Classification__c</fullName>
    <formula>IF(ISPICKVAL(Checklist__r.genesis__Rule__r.Rule_Classification__c,&apos;Rule&apos;),&apos;Rule&apos;,IF(ISPICKVAL(Checklist__r.genesis__Rule__r.Rule_Classification__c,&apos;Warning&apos;),&apos;Warning&apos;,IF(ISPICKVAL(Checklist__r.genesis__Rule__r.Rule_Classification__c,&apos;Condition&apos;),&apos;Condition&apos;,&apos;Exception&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rule Classification</label>
    <type>Text</type>
</CustomField>