force-app/main/default/objects/Checklist_Detail__c/fields/Show_on_Indicative_Approval_Letter__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Indicative_Approval_Letter__c</fullName>
    <label>Show on Indicative Approval Letter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>