force-app/main/default/objects/Checklist_Detail__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NOT EVALUATED</fullName>
                <default>true</default>
                <label>NOT EVALUATED</label>
            </value>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>