force-app/main/default/objects/Checklist_Detail__c/fields/Supporting_Document_Verified__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Document_Verified__c</fullName>
    <label>Supporting Document Verified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>n/a</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>