force-app/main/default/objects/Checklist_Detail__c/fields/True_Exception__c.field-meta.xml
<CustomField>
    <fullName>True_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>True Credit Exception</label>
    <type>Checkbox</type>
</CustomField>