force-app/main/default/objects/Checklist_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exception_Recommender__c</columns>
    <columns>Exception_Commentary__c</columns>
    <columns>Exception_Approver__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>